alignment for privacy and terms pages fixed

--- a/Backend/ecommerce/resources/sass/pages/about.scss
+++ b/Backend/ecommerce/resources/sass/pages/about.scss
@@ -2,9 +2,7 @@
     position:relative;
     left:450px;
     top:200px;
-    color:#fff;
-    font-weight:700px;
-    font-family:'Times New Roman', Times, serif;
+    color:#000;
 }
 .imageabout{
     width:100%;
